--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ehsonjon Gadoev's blog</title>
+	<link rel="stylesheet" href="css/pe-playground.css">
+	<link rel="stylesheet" href="css/pe-tenue.css">
 
 	<style>
 		html {
@@ -184,7 +186,14 @@
 	</script>
 </head>
 <body>
-
+	<!--- Tune Css --->
+	<section class="pe-playground">
+      <div class="pe-texture">
+        <h1 class="tenue-shadow tenue-extras"><sub>E</sub><sup>h</sup><sub>s</sub><sub>o</sub><sup>n</sup><sub>j</sub><sub>o</sub><sub>n</sub><sub> </sub><sub>G</sub><sub>a</sub><sub>d</sub><sub>o</sub><sub>e</sub><sub>v</sub></h1>
+        <div class="tenue-overlay"></div>
+	  </div>
+	</section>
+	<!--- End of Tune Css --->
 	<div class="center">
 		<div class="text">
 			<span><span id="sd-1">Ehsonjon Gadoev's blog</span></span>
