--- a/index.html
+++ b/index.html
@@ -189,7 +189,9 @@
 	<!--- Tune Css --->
 	<section class="pe-playground">
       <div class="pe-texture">
-        <h1 class="tenue-shadow tenue-extras"><sub>E</sub><sup>h</sup><sub>s</sub><sub>o</sub><sup>n</sup><sub>j</sub><sub>o</sub><sub>n</sub><sub> </sub><sub>G</sub><sub>a</sub><sub>d</sub><sub>o</sub><sub>e</sub><sub>v</sub></h1>
+        <h1 class="tenue-shadow tenue-extras">
+		<sub>Ehsonjon</sub><sub> </sub><sub>Gadoev</sub>
+	</h1>
         <div class="tenue-overlay"></div>
 	  </div>
 	</section>
