--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ehsonjon Gadoev's blog</title>
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/pe-playground.css">
 	<link rel="stylesheet" href="css/pe-tenue.css">
 
