--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 		<div class="text">
 			<span><span id="sd-1">Ehsonjon Gadoev's blog</span></span>
 		</div>
-		<small class="meta"><a href="https://github.com/icoder-new/icoder.github.io">Coded</a> by Ehsonjon Gadoev</small>
+		<small class="meta"><a href="https://icoder-new.github.io/3D.html">Coded</a> by Ehsonjon Gadoev</small>
 	</div>
 
 	<script src="dist/swapdogs.min.js"></script>
